--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit",
     "ios": "cap add ios && cap sync ios",
     "android": "cap add android && cap sync android",
-    "start": "vite preview --host --port $PORT"
+    "start": "vite preview --host"
   },
   "dependencies": {
     "@capacitor/android": "^5.0.0",
