--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit",
     "ios": "cap add ios && cap sync ios",
     "android": "cap add android && cap sync android",
-    "heroku-postbuild": "vite preview --host"
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@capacitor/android": "^5.0.0",
@@ -39,9 +39,8 @@
     "socket.io-client": "^4.7.4",
     "three": "^0.160.0",
     "use-sound": "^4.0.1",
-    "vite": "^5.0.12",
-    "vite-plugin-pwa": "^0.17.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "serve": "^14.0.1"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0",
@@ -61,6 +60,8 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-pwa": "^0.17.4",
     "vitest": "^1.2.1"
   }
 }
